--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/GIED.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GIED</title>
+    <title>GIED - Eventos Deportivos</title>
+    <meta
+      name="description"
+      content="GIED es la plataforma líder para descubrir y gestionar eventos deportivos. Mantente al día con nuestras actividades exclusivas, explora los próximos eventos y sé parte de la acción. ¡Bienvenidos a GIED!"
+    />
+    <meta name="keywords" content="GIED, eventos deportivos en mallorca, deportes, próximos eventos, actividades exclusivas" />
+    <meta name="author" content="GIED Team" />
+    <meta property="og:title" content="GIED - Eventos Deportivos" />
+    <meta
+      property="og:description"
+      content="Descubre los mejores eventos deportivos en Mallorca con GIED. Organiza, participa y explora una amplia variedad de actividades deportivas diseñadas para ti."
+    />
+    <meta property="og:image" content="/assets/images/og-image.jpg" />
+    <meta property="og:url" content="https://gied.com" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
