feat: add services section and refactor site structure
- Introduce new ServicesSection component with detailed service offerings and process visualization
- Implement ScrollContext to centralize smooth scrolling functionality
- Update site branding to focus on professional sports event management
- Remove legacy event and travel-related pages to streamline content
- Enhance AboutUs section with improved layout and animations
- Refactor Header to use new scroll context and improve mobile menu experience
- Update HTML metadata and contact information to reflect new brand positioning

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>
-      GIED - Eventos Deportivos | Participa y explora actividades exclusivas.
+      GIED Esports - Gestión Integral de Instalaciones y Eventos Deportivos
     </title>
 
     <meta
       name="description"
-      content="GIED es la plataforma líder para descubrir y participar en eventos deportivos en Mallorca. Explora actividades exclusivas en Sóller y más. ¡Únete a la acción con GIED!"
+      content="GIED Esports nace para profesionalizar y elevar el nivel de los
+eventos deportivos en las Islas Baleares, aportando una visión
+moderna, eficiente y centrada en las personas."
     />
     <meta
       http-equiv="Content-Security-Policy"
